kube/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ampara-service

spec:
  type: ClusterIP

  selector:
    app: ampara-pod

  ports:
    - name: http
      protocol: TCP

      # Porta pela qual o Service sera acessado internamente.
      port: 80

      # Porta nomeada no container do Deployment.
      targetPort: http
